SEO Meta tags add

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,13 @@
 		<meta name="theme-color" content="#000000" />
 		<meta
 			name="description"
-			content="Web site created using create-react-app"
+			content="Tennis Academy Yasar - Tennisschule Am Osterholz 4 78333 Stockach"
 		/>
+		<meta
+			name="keywords"
+			content="tennis academy yasar stockach singen konstanz thurgau schweiz"
+		/>
+		<meta name="robots" content="index" />
 
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
