--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 		/>
 		<meta
 			name="keywords"
-			content="tennis academy yasar stockach singen konstanz thurgau schweiz"
+			content="tennis academy yasar bodensee stockach singen konstanz thurgau schweiz tecnifibre"
 		/>
 		<meta name="robots" content="index" />
 
