--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
 		<meta name="theme-color" content="#000000" />
 		<meta
 			name="description"
-			content="Tennis Academy Yasar - Tennisschule Am Osterholz 4 78333 Stockach"
+			content="Tennis Academy Yasar - Training Sucks? Try Losing! - Professionelles Tennistraining in Stockach"
 		/>
 		<meta
 			name="keywords"
-			content="tennis academy yasar bodensee stockach singen konstanz thurgau schweiz tecnifibre"
+			content="tennis academy yasar tennislehrer lehrer tennistraining spiel spielen training court bodensee stockach bodman ludwigshafen meersburg tuttlingen singen konstanz thurgau schweiz tecnifibre"
 		/>
 		<meta name="robots" content="index" />
 
