--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,7 @@
 		<meta name="theme-color" content="#000000" />
 		<meta
 			name="description"
-			content="Tennis Academy Yasar - Training Sucks? Try Losing! - Professionelles Tennistraining in Stockach"
-		/>
-		<meta
-			name="keywords"
-			content="tennis academy yasar tennislehrer lehrer tennistraining spiel spielen training court bodensee stockach bodman ludwigshafen meersburg tuttlingen singen konstanz thurgau schweiz tecnifibre"
+			content="Tennis Academy Yasar - Training Sucks? Try Losing! - Professionelles Tennistraining in Stockach am Bodensee. Unsere erfahrenen Tennislehrer bringen Sie garantiert zum Erfolg."
 		/>
 		<meta name="robots" content="index" />
 
@@ -25,7 +21,7 @@
 			integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
 			crossorigin="anonymous"
 		/>
-		<title>Tennis Academy Yasar</title>
+		<title>Tennis Academy Yasar - Tennisschule in Stockach</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
